# phongdefo

./: CMakeLists.txt  CMakePresets.json  README.md  install_package.py  phongdefo.json.in
examples/: validate_sop.py
src/: DeformationTracker.cpp  SOP_TetEmbeddedDeform.cpp  TetMesh.cpp  TetMesh.h
